[package]
name = "wadm"
description = "wasmCloud Application Deployment Manager: A tool for running Wasm applications in wasmCloud"
version = "0.11.0"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmcloud/wadm"

[features]
default = ["full"]
cli = [
    "clap",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry-otlp",
]
full = [
    "anyhow",
    "async-nats",
    "async-trait",
    "base64",
    "bytes",
    "chrono",
    "cloudevents-sdk",
    "futures",
    "jsonschema",
    "lazy_static",
    "nkeys",
    "opentelemetry",
    "opentelemetry-otlp",
    "prometheus",
    "rand",
    "regex",
    "semver",
    "sha2",
    "thiserror",
    "tokio",
    "tracing",
    "tracing-futures",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "uuid",
    "wasmcloud-control-interface"
]
# internal feature for e2e tests
_e2e_tests = []

[dependencies]
anyhow = { version = "1", optional = true }
async-nats = { version = "0.33", optional = true }
async-trait = { version = "0.1", optional = true }
base64 = { version = "0.21.2", optional = true }
bytes = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
clap = { version = "4", features = ["derive", "cargo", "env"], optional = true }
cloudevents-sdk = { version = "0.7", optional = true }
futures = { version = "0.3", optional = true }
indexmap = { version = "2", features = ["serde"] }
jsonschema = { version = "0.17", optional = true }
lazy_static = { version = "1", optional = true }
nkeys = { version = "0.3.0", optional = true }
opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.10", features = ["http-proto", "reqwest-client"], optional = true }
prometheus = { version = "0.13", optional = true }
rand = { version = "0.8", features = ["small_rng"], optional = true }
regex = { version = "1.9.3", optional = true }
semver = { version = "1.0.16", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
sha2 = { version = "0.10.2", optional = true }
thiserror = { version = "1", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing = { version = "0.1", features = ["log"], optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.17", optional = true }
tracing-subscriber = { version = "0.3.7", features = ["env-filter", "json"], optional = true }
uuid = { version = "1", optional = true }
wasmcloud-control-interface = { version = "1.0.0", optional = true }

[dev-dependencies]
serial_test = "1"

[[bin]]
name = "wadm"
path = "bin/main.rs"
required-features = ["cli"]
