[package]
name = "wadm"
description = "wasmCloud Application Deployment Manager: A tool for running Wasm applications in wasmCloud"
version = "0.11.1"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmcloud/wadm"

[features]
default = []
cli = [
    "clap",
    "tracing-opentelemetry",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry-otlp",
]
# internal feature for e2e tests
_e2e_tests = []

[dependencies]
anyhow = "1"
async-nats = "0.33"
async-trait = "0.1"
base64 = "0.21.2"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo", "env"], optional = true }
cloudevents-sdk = "0.7"
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
jsonschema = "0.17"
lazy_static = "1"
nkeys = "0.3.0"
# One version back to avoid clashes with 0.10 of otlp
opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
# 0.10 to avoid protoc dep
opentelemetry-otlp = { version = "0.10", features = [
    "http-proto",
    "reqwest-client",
], optional = true }
# TODO: Actually leverage prometheus
prometheus = { version = "0.13", optional = true }
rand = { version = "0.8", features = ["small_rng"] }
regex = "1.9.3"
semver = { version = "1.0.16", features = ["serde"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10.2"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-opentelemetry = { version = "0.17", optional = true }
tracing-subscriber = { version = "0.3.7", features = [
    "env-filter",
    "json",
], optional = true }
ulid = { version = "1", features = ["serde"] }
uuid = "1"
wasmcloud-control-interface = "1.0.0"

[dev-dependencies]
serial_test = "1"

[[bin]]
name = "wadm"
path = "bin/main.rs"
required-features = ["cli"]
