[package]
name = "wadm-cli"
description = "wasmCloud Application Deployment Manager: A tool for running Wasm applications in wasmCloud"
version.workspace = true
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wasmcloud/wadm"
default-run = "wadm"

[workspace.package]
version = "0.20.2"

[features]
default = []
# internal feature for e2e tests
_e2e_tests = []

[workspace]
members = ["crates/*"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "env"] }
# One version back to avoid clashes with 0.10 of otlp
opentelemetry = { workspace = true, features = ["rt-tokio"] }
# 0.10 to avoid protoc dep
opentelemetry-otlp = { workspace = true, features = [
    "http-proto",
    "reqwest-client",
] }
schemars = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
wadm = { workspace = true, features = ["cli", "http_admin"] }
wadm-types = { workspace = true }

[workspace.dependencies]
anyhow = "1"
async-nats = "0.36"
async-trait = "0.1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo", "env"] }
cloudevents-sdk = "0.7"
futures = "0.3"
http = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
indexmap = { version = "2", features = ["serde"] }
jsonschema = "0.17"
lazy_static = "1"
nkeys = "0.4.4"
# One version back to avoid clashes with 0.10 of otlp
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
# 0.10 to avoid protoc dep
opentelemetry-otlp = { version = "0.10", features = [
    "http-proto",
    "reqwest-client",
] }
rand = { version = "0.8", features = ["small_rng"] }
# NOTE(thomastaylor312): Pinning this temporarily to 1.10 due to transitive dependency with oci
# crates that are pinned to 1.10
regex = "~1.10"
schemars = "0.8"
semver = { version = "1.0.25", features = ["serde"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10.2"
thiserror = "2"
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-opentelemetry = { version = "0.17" }
tracing-subscriber = { version = "0.3.7", features = ["env-filter", "json"] }
ulid = { version = "1", features = ["serde"] }
utoipa = "5"
uuid = "1"
wadm = { version = "0.20.1", path = "./crates/wadm" }
wadm-client = { version = "0.8", path = "./crates/wadm-client" }
wadm-types = { version = "0.8", path = "./crates/wadm-types" }
wasmcloud-control-interface = { version = "2.3.0" }
wasmcloud-secrets-types = "0.5.0"
wit-bindgen-wrpc = { version = "0.9", default-features = false }
wit-bindgen = { version = "0.36.0", default-features = false }

[dev-dependencies]
async-nats = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serial_test = "3"
wadm-client = { workspace = true }
wadm-types = { workspace = true }
wasmcloud-control-interface = { workspace = true }
testcontainers = "0.23"

[build-dependencies]
schemars = { workspace = true }
serde_json = { workspace = true }
wadm-types = { workspace = true }

[[bin]]
name = "wadm"
path = "src/main.rs"

[[bin]]
name = "wadm-schema"
path = "src/schema.rs"
