[package]
name = "wadm-client"
description = "A client library for interacting with the wadm API"
version = "0.8.2"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wadm"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
nkeys = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
wadm-types = { workspace = true }
