[package]
name = "wadm-types"
description = "Types and validators for the wadm API"
version = "0.7.2"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wadm"

[features]
default = ["std"]
std = ["dep:tokio"]         # Use dep: prefix to be explicit
wasm = []                   # For wasm environments
wrpc = ["wit-bindgen-wrpc"] # For RPC functionality

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true, features = ["full"] }

[dependencies]
serde_yaml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
wit-bindgen-wrpc = { workspace = true, optional = true }
