[package]
name = "wadm-types"
description = "Types and validators for the wadm API"
version = "0.7.2"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wadm"

[features]
default = ["std"]
std = ["dep:tokio"]
wit-wasm = ["dep:wit-bindgen"]
wit-std = ["dep:wit-bindgen-wrpc"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true, optional = true, features = ["full"] }
wit-bindgen = { workspace = true, optional = true, features = ["macros"] }
wit-bindgen-wrpc = { workspace = true, optional = true }
