[package]
name = "wadm-types"
description = "Types and validators for the wadm API"
version = "0.8.2"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
repository = "https://github.com/wasmcloud/wadm"

[features]
wit = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
utoipa = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
wit-bindgen-wrpc = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wit-bindgen = { workspace = true, features = ["macros"] }
