[package]
name = "wadm"
description = "wasmCloud Application Deployment Manager: A tool for running Wasm applications in wasmCloud"
version = "0.13.0-beta.1"
edition = "2021"
authors = ["wasmCloud Team"]
keywords = ["webassembly", "wasmcloud", "wadm"]
license = "Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/wasmcloud/wadm"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
cloudevents-sdk = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
jsonschema = { workspace = true }
lazy_static = { workspace = true }
nkeys = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
regex = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-futures = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
uuid = { workspace = true }
wadm-types = { workspace = true }
wasmcloud-control-interface = { workspace = true }

[dev-dependencies]
serial_test = "3"
